--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
     "jsonwebtoken": "^9.0.3",
+    "midtrans-client": "^1.4.3",
     "next": "16.0.8",
     "pg": "^8.16.3",
     "react": "19.2.1",
@@ -24,6 +25,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/bcrypt": "^6.0.0",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/midtrans-client": "^1.4.0",
     "@types/node": "^20.19.26",
     "@types/pg": "^8.15.6",
     "@types/react": "^19",
