--- a/.env
+++ b/.env
@@ -1,10 +1,11 @@
+
 # Connect to Supabase via connection pooling
 DATABASE_URL="postgresql://postgres.izqlvbxgpykcphfonvku:joyze_db@aws-1-ap-south-1.pooler.supabase.com:6543/postgres?pgbouncer=true"
 
 # Direct connection to the database. Used for migrations
 # DATABASE_URL="postgresql://postgres.izqlvbxgpykcphfonvku:joyze_db@aws-1-ap-south-1.pooler.supabase.com:5432/postgres"
 
-JWT_SECRET=123456asd
+JWT_SECRET=0b202ac21229300fabef6ec193b15a97
 
 MIDTRANS_IS_PRODUCTION=false
 MIDTRANS_MERCHANT_ID=G527989777
