--- a/.env.local
+++ b/.env.local
@@ -5,7 +5,7 @@ DATABASE_URL="postgresql://postgres.izqlvbxgpykcphfonvku:joyze_db@aws-1-ap-south
 # Direct connection to the database. Used for migrations
 # DATABASE_URL="postgresql://postgres.izqlvbxgpykcphfonvku:joyze_db@aws-1-ap-south-1.pooler.supabase.com:5432/postgres"
 
-JWT_SECRET=123456asd
+JWT_SECRET=0b202ac21229300fabef6ec193b15a97
 
 MIDTRANS_IS_PRODUCTION=false
 MIDTRANS_MERCHANT_ID=G527989777
