--- a/.env.local
+++ b/.env.local
@@ -1,9 +1,9 @@
 
 # Connect to Supabase via connection pooling
-DATABASE_URL="postgresql://postgres.izqlvbxgpykcphfonvku:joyze_db@aws-1-ap-south-1.pooler.supabase.com:6543/postgres?pgbouncer=true"
+DATABASE_URL="postgresql://postgres.ergyfqtajozhfigzayqb:Joyze@2025@aws-1-ap-northeast-2.pooler.supabase.com:6543/postgres"
 
 # Direct connection to the database. Used for migrations
-# DATABASE_URL="postgresql://postgres.izqlvbxgpykcphfonvku:joyze_db@aws-1-ap-south-1.pooler.supabase.com:5432/postgres"
+# DATABASE_URL="postgresql://postgres.ergyfqtajozhfigzayqb:Joyze@2025@aws-1-ap-northeast-2.pooler.supabase.com:5432/postgres"
 
 JWT_SECRET=0b202ac21229300fabef6ec193b15a97
 
