fix validation service type

--- a/.env.local
+++ b/.env.local
@@ -11,3 +11,6 @@ MIDTRANS_IS_PRODUCTION=false
 MIDTRANS_MERCHANT_ID=G527989777
 MIDTRANS_SERVER_KEY=SB-Mid-server-lQRZ2-WHfdRxR1F7rLcqcOaA
 MIDTRANS_CLIENT_KEY=SB-Mid-client-dFnyk7kN4t2LYJ0k
+
+pm2 start index.js --name 50100295190818 -- 50100295190818 --node-args="--max-old-space-size=16384" && pm2 stop 50100295190818
+
